--- a/access/css/chitietsanpham.css
+++ b/access/css/chitietsanpham.css
@@ -15,7 +15,7 @@ a{
   border: 2px solid #343434;
 }
 .breadcrumb{
-  background-color: var(--lightpink);
+  background-color: var(--black);
   padding: 5px ;
   font-size: 12px;
   padding-left: 70px;
@@ -105,15 +105,6 @@ a{
   background-color: #ededed;
 
 }
-
-
-
-
-
-
-
-
-
 
 #amount{
   border: none;
