--- a/access/css/sanpham.css
+++ b/access/css/sanpham.css
@@ -5,7 +5,7 @@
     width: 100%;
     text-align: center;
     font-size: 1.6rem;
-    background-color: var(--background-color);
+    background-color: var(--black);
     color: var(--white-color);
     font-weight: 400;
 }
@@ -22,7 +22,7 @@ u{
     margin: 0 2px;
 }
 .breadcrumb{
-    background-color: var(--lightpink);
+    background-color: var(--black);
     padding: 5px ;
     font-size: 12px;
     padding-left: 70px;
@@ -36,7 +36,7 @@ u{
 
 /* col_left */
 a{
-    color: var(--black);
+    color: var(--white-color);
     text-decoration: none;
 }
 .col__left{
@@ -163,7 +163,7 @@ li{
 
 .home-product-item__price-no-discount{
     font-size: 1.6rem;
-    color: #666;
+    color: black;
     margin-left: 5px;
 }
 
@@ -176,7 +176,7 @@ li{
 .home-product-item__price-old{
     margin-left: 5px;
     font-size: 1.4rem;
-    color: #666;
+    color: black;
     text-decoration: line-through;
 }
 
