cap nhat chu va mau sac

--- a/access/css/base.css
+++ b/access/css/base.css
@@ -4,7 +4,7 @@
     --text-color:rgb(0, 0, 0);
     --liked-color: orange;
     --discount-color: rgba(255,216,64,0.94);
-    --main-color:#b8a898;
+    --main-color:#000;
     --background-color:#d2beb4;
     --btn-color:#6b4932;/* màu chữ slider 2*/
     --red-color:red;  
